tests/testcases/errors/BCE0153-2.boo
import BooCompiler.Tests.SupportingClasses

def foo() [ThisReturnTypeIs("null")] as string:
	pass
	

